feat: update TodoItem modal, responses, DTO
