# web/references/swagger.yaml
@@ -267,19 +267,13 @@ paths:
           content:
             text/plain:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/TodoItemDTO'
+                $ref: '#/components/schemas/GetTodoItemsResponse'
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/TodoItemDTO'
+                $ref: '#/components/schemas/GetTodoItemsResponse'
             text/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/TodoItemDTO'
+                $ref: '#/components/schemas/GetTodoItemsResponse'
     post:
       tags:
         - TodoItems
@@ -398,6 +392,20 @@ components:
       properties:
         email:
           type: string
+          nullable: true
+      additionalProperties: false
+    GetTodoItemsResponse:
+      type: object
+      properties:
+        success:
+          type: boolean
+        errorMessage:
+          type: string
+          nullable: true
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/TodoItemDTO'
           nullable: true
       additionalProperties: false
     HttpValidationProblemDetails:
@@ -520,16 +528,31 @@ components:
           nullable: true
       additionalProperties: false
     TodoItemDTO:
+      required:
+        - title
       type: object
       properties:
         id:
           type: integer
           format: int64
-        name:
+        title:
           type: string
           nullable: true
         isComplete:
           type: boolean
+        description:
+          type: string
+          nullable: true
+        dueDate:
+          type: string
+          format: date-time
+          nullable: true
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
       additionalProperties: false
     TwoFactorRequest:
       type: object
